add user enroll page

--- a/views/instructor/watch.ejs
+++ b/views/instructor/watch.ejs
@@ -67,7 +67,7 @@
         <li class="breadcrumb-item"><a href="/">
             <img src="/assets/images/logo-images.svg" width="30px">
           </a></li>
-        <li class="breadcrumb-item active">Watch List</li>
+        <li class="breadcrumb-item active">List Courses</li>
       </ol>
     </nav>
 
