--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   /* background-color: aliceblue */
   background-color: aliceblue;
 }
