--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -59,6 +59,11 @@
 								<i class="fa fa-heart" aria-hidden="true"></i>
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/student/enroll">
+							  <i class="fa fa-book" aria-hidden="true"></i>
+							</a>
+						  </li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false">
