--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -72,6 +72,11 @@
                   <i class="fa fa-heart" aria-hidden="true"></i>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/student/enroll">
+                  <i class="fa fa-book" aria-hidden="true"></i>
+                </a>
+              </li>
             <% } %>
             <li class="nav-item dropdown">
               <a
