--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -175,17 +175,27 @@
       </div>
       <div class="row">
         <div id="filterSection" data-query="<%= payload.query %>" class="col-3">
-          <select id="orderBy" class="form-select w-100 mb-2">
-            <option selected disabled>Order by</option>
-            <option value="order_price">Order by price</option>
-            <option value="order_review">Order by rating</option>
+          <select id="orderBy" data-order-by="<%= order_by %>" class="form-select w-100 mb-2">
+            <% if(order_by === "order_review") { %>
+              <option selected value="order_review">Order by rating</option>
+              <option value="order_price">Order by price</option>
+            <% } else { %>
+              <option value="order_review">Order by rating</option>
+              <option selected value="order_price">Order by price</option>
+            <% } %>
           </select>
 
-          <select id="sortBy" class="form-select w-100 mb-2">
-            <option selected disabled>Sort by</option>
-            <option value="ASC">Ascending</option>
-            <option value="DESC">Descending </option>
+          <select id="sortBy" data-sort-by="<%= sort_by %>" class="form-select w-100 mb-2">
+            <% if(sort_by === "DECS") { %>
+              <option selected value="DESC">Descending </option>
+              <option value="ASC">Ascending</option>
+            <% } else { %>
+              <option value="DESC">Descending </option>
+              <option selected value="ASC">Ascending</option>
+            <% } %>
           </select>
+          
+          <button id="filterBtn" class="btn btn-block btn-primary">Filter</button>
 
         </div>
         <div id="coursesSection"  class="col-9">
@@ -367,18 +377,37 @@
         filterFlag = !filterFlag
       })
 
-      $("#sortBy").change(function(){
+      // $("#sortBy").change(function(){
+      //   let order_by = $("#orderBy").val()
+      //   let sort_by = $("#sortBy").val()
+      //   let query = $("#filterSection").data("query")
+      //   let orderStr = order_by ? `${order_by}=${sort_by}` : `order_review=${sort_by}`
+      //   window.location.href = `/search?query=${query}&${orderStr}`
+      // })
+
+      // $(".page").click(function() {
+      //   let page = $(this).data("page")
+      //   let query = $("#filterSection").data("query")
+      //   window.location.href = `/search?query=${query}&page=${page}`
+      // })
+      $("#filterBtn").click(function(){
+        let query = $("#filterSection").data("query")
         let order_by = $("#orderBy").val()
         let sort_by = $("#sortBy").val()
-        let query = $("#filterSection").data("query")
         let orderStr = order_by ? `${order_by}=${sort_by}` : `order_review=${sort_by}`
         window.location.href = `/search?query=${query}&${orderStr}`
       })
 
       $(".page").click(function() {
         let page = $(this).data("page")
+        let order_by = $("#orderBy").data("order-by")
+        let sort_by = $("#sortBy").data("sort-by")
         let query = $("#filterSection").data("query")
-        window.location.href = `/search?query=${query}&page=${page}`
+        if(order_by === "order_review" && sort_by === "DESC") {
+          window.location.href = `/search?query=${query}&page=${page}`
+        } else {
+          window.location.href = `/search?query=${query}&page=${page}&${order_by}=${sort_by}`
+        }
       })
     })
   </script>
