--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -23,7 +23,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container">
-      <a href="#" class="navbar-branch">
+      <a href="/" class="navbar-branch">
         <img src="/assets/images/logo.svg" width="160px" />
       </a>
       <button
